<resources>
    <string name="app_name">LM BODYPUMP Quiz</string>
    <string name="welcomeText">Do you consider yourself a true BODYPUMP fan?</string>
    <string name="welcome2Text">And test your knowledge!</string>
    <string name="beginText">Let\'s Begin!</string>
    <string name="editTextNameString">ENTER YOUR NAME HERE</string>
    <string name="missingName">Please go up and enter your name</string>
    <string name="missedAnswer">Keep Strong %1$s,\nyou missed track %2$d</string>
    <string name="submitButtonText">Submit your training</string>
    <string name="track1">1. Warmup</string>
    <string name="track2">2. Legs/Squats</string>
    <string name="track3">3. Chest</string>
    <string name="track4">4. Back/Gluteals/Hamstrings</string>
    <string name="track5">5. Arms/Triceps</string>
    <string name="track6">6. Arms/Biceps</string>
    <string name="track7">7. Legs/Lunges</string>
    <string name="track8">8. Shoulders/Arms</string>
    <string name="track9">9. Abdominals/Core</string>
    <string name="track10">10.Cooldown/Stretch</string>
    <string name="question1">What BODYPUMP release does <i>Wonderwall - Jackie \'O\'</i> belong to?</string>
    <string name="question2">What is the BODYPUMP #87 Track 2 Tittle?</string>
    <string name="question3">Which of these Track 3 is/are longer? (multiple right answers)</string>
    <string name="question4">Which one of these tracks is a Track 4?</string>
    <string name="question5">What is the BODYPUMP #52 Track 5?</string>
    <string name="question6">What is the BODYPUMP #26 Track 6 Tittle?</string>
    <string name="question7">What sequence/exercise must be performed on verse 1 in BODYPUMP #53 Track 7?</string>
    <string name="question8">Which one of these artists has been selected for one or several track 8?</string>
    <string name="question9">Who are the video presenters on BODYPUMP #25?</string>
    <string name="question10">What was the last BODYPUMP release choreographed by Michael J. McSweeney?</string>
    <string name="aAnswerQ1">BODYPUMP #46</string>
    <string name="bAnswerQ1">BODYPUMP #27</string>
    <string name="cAnswerQ1">BODYPUMP #48 Celebration Mix</string>
    <string name="dAnswerQ1">BODYPUMP #25</string>
    <string name="aAnswerQ2">Only You</string>
    <string name="bAnswerQ2">Eye Of The Tiger</string>
    <string name="cAnswerQ2">Smells Like Teen Spirit (Voc Mix)</string>
    <string name="dAnswerQ2">Black Betty</string>
    <string name="aAnswerQ3">Push it (Again) - Salt N Pepa</string>
    <string name="bAnswerQ3">You Needed Me - Boyzone</string>
    <string name="cAnswerQ3">Don\'t Tell Me - Madonna</string>
    <string name="dAnswerQ3">Spente Le Stelle - Opera Trance</string>
    <string name="aAnswerQ4">Domino	- Miss Daise</string>
    <string name="bAnswerQ4">The Tide - Twilight</string>
    <string name="cAnswerQ4">I Like How It Feels - Solitary Phase</string>
    <string name="dAnswerQ4">Scream - Usher</string>
    <string name="aAnswerQ5">Don\'t Panic - Logo Feat. Dawn Joseph (Coldplay)</string>
    <string name="bAnswerQ5">All Things (Just Keep Getting Better)- Wildlife with Simone Denny</string>
    <string name="cAnswerQ5">What You Waiting For? - Gwen Stefani</string>
    <string name="dAnswerQ5">Let The Sun Shine - Milk and Sugar Feat. Lizzie Pattinson</string>
    <string name="aAnswerQ6">Stomp</string>
    <string name="bAnswerQ6">Forever</string>
    <string name="cAnswerQ6">Jump</string>
    <string name="dAnswerQ6">Crazy</string>
    <string name="aAnswerQ7">2/2 Lunge</string>
    <string name="bAnswerQ7">1/3 Lunge</string>
    <string name="cAnswerQ7">3/1 Lunge</string>
    <string name="dAnswerQ7">4/4 Lunge</string>
    <string name="aAnswerQ8">Michael Jackson</string>
    <string name="bAnswerQ8">Madonna</string>
    <string name="cAnswerQ8">Justin Timberlake</string>
    <string name="dAnswerQ8">Lady Gaga</string>
    <string name="aAnswerQ9">Michael J. McSweeney and Ruthie T</string>
    <string name="bAnswerQ9">Michael J. McSweeney, Ruthie T and Donna McCourt</string>
    <string name="cAnswerQ9">Michael J. McSweeney, Lisa Osborne and Donna McCourt</string>
    <string name="dAnswerQ9">Michael J. McSweeney and Donna McCourt</string>
    <string name="editTextAnswerQ10">Enter release number here</string>

    <string name="correctAnswerQ1tag">3</string>
    <string name="correctAnswerQ2tag">3</string>

    <string name="correctAnswerQ3tag">1</string>
    <string name="incorrectAnswerQ3tag">-2</string>

    <string name="correctAnswerQ4tag">1</string>
    <string name="correctAnswerQ5tag">1</string>
    <string name="correctAnswerQ6tag">0</string>
    <string name="correctAnswerQ7tag">2</string>
    <string name="correctAnswerQ8tag">0</string>
    <string name="correctAnswerQ9tag">3</string>
    <string name="correctAnswerQ10">58</string>

    <string name="correctAnswers0">%1$s you scored: %2$d\nDo you even know what BODYPUMP is?</string>
    <string name="correctAnswers1">%1$s you scored: %2$d\nI bet you got that one by luck!</string>
    <string name="correctAnswers2">%1$s you scored: %2$d\nMaybe you know these 2 answers, maybe you got them by luck!</string>
    <string name="correctAnswers3">%1$s you scored: %2$d\nYou should check BODYPUMP info on Internet</string>
    <string name="correctAnswers4">%1$s you scored: %2$d\nAlmost half training accomplished, not bad, I bet next time yo can do better</string>
    <string name="correctAnswers5">%1$s you scored: %2$d\nHalf training accomplished, well done!</string>
    <string name="correctAnswers6">%1$s you scored: %2$d\nYou made 6 tracks, outstanding!</string>
    <string name="correctAnswers7">%1$s you scored: %2$d\nCongratulations consider yourself a true BODYPUMP fan!</string>
    <string name="correctAnswers8">%1$s you scored: %2$d\nYou accomplished almost a complete training, really impressive!</string>
    <string name="correctAnswers9">%1$s you scored: %2$d\nTotally amazing, you are a pro BODYPUMP fan!</string>
    <string name="correctAnswers10">%1$s you scored: %2$d\nPerfect, you are better Pump fam than everyone in New Zealand, including Mike and Glen!</string>

</resources>
