<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout style="@style/questionLayoutStyle">

        <TextView
            style="@style/questionLabelStyle"
            android:text="@string/track1" />

        <TextView
            style="@style/questionStatementStyle"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/question1Group"
            style="@style/radioGroupStyle"
            android:tag="@string/correctAnswerQ1tag">

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/aAnswerQ1" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/bAnswerQ1" />

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/cAnswerQ1" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/dAnswerQ1" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout style="@style/questionLayoutStyle">

        <TextView
            style="@style/questionLabelStyle"
            android:text="@string/track2" />

        <TextView
            style="@style/questionStatementStyle"
            android:text="@string/question2" />

        <RadioGroup
            android:id="@+id/question2Group"
            style="@style/radioGroupStyle"
            android:tag="@string/correctAnswerQ2tag">

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/aAnswerQ2" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/bAnswerQ2" />

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/cAnswerQ2" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/dAnswerQ2" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout style="@style/questionLayoutStyle">

        <TextView
            style="@style/questionLabelStyle"
            android:text="@string/track3" />

        <TextView
            style="@style/questionStatementStyle"
            android:text="@string/question3" />

        <CheckBox
            android:id="@+id/aAnswerQ3checkBox"
            style="@style/possibleAnswerStyle"
            android:tag="@string/incorrectAnswerQ3tag"
            android:text="@string/aAnswerQ3" />

        <CheckBox
            android:id="@+id/bAnswerQ3checkBox"
            style="@style/possibleAnswerStyleRed"
            android:tag="@string/correctAnswerQ3tag"
            android:text="@string/bAnswerQ3" />

        <CheckBox
            android:id="@+id/cAnswerQ3checkBox"
            style="@style/possibleAnswerStyle"
            android:tag="@string/correctAnswerQ3tag"
            android:text="@string/cAnswerQ3" />

        <CheckBox
            android:id="@+id/dAnswerQ3checkBox"
            style="@style/possibleAnswerStyleRed"
            android:tag="@string/incorrectAnswerQ3tag"
            android:text="@string/dAnswerQ3" />

    </LinearLayout>

    <LinearLayout style="@style/questionLayoutStyle">

        <TextView
            style="@style/questionLabelStyle"
            android:text="@string/track4" />

        <TextView
            style="@style/questionStatementStyle"
            android:text="@string/question4" />

        <RadioGroup
            android:id="@+id/question4Group"
            style="@style/radioGroupStyle"
            android:tag="@string/correctAnswerQ4tag">

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/aAnswerQ4" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/bAnswerQ4" />

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/cAnswerQ4" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/dAnswerQ4" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout style="@style/questionLayoutStyle">

        <TextView
            style="@style/questionLabelStyle"
            android:text="@string/track5" />

        <TextView
            style="@style/questionStatementStyle"
            android:text="@string/question5" />

        <RadioGroup
            android:id="@+id/question5Group"
            style="@style/radioGroupStyle"
            android:tag="@string/correctAnswerQ5tag">

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/aAnswerQ5" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/bAnswerQ5" />

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/cAnswerQ5" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/dAnswerQ5" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout style="@style/questionLayoutStyle">

        <TextView
            style="@style/questionLabelStyle"
            android:text="@string/track6" />

        <TextView
            style="@style/questionStatementStyle"
            android:text="@string/question6" />

        <RadioGroup
            android:id="@+id/question6Group"
            style="@style/radioGroupStyle"
            android:tag="@string/correctAnswerQ6tag">

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/aAnswerQ6" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/bAnswerQ6" />

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/cAnswerQ6" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/dAnswerQ6" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout style="@style/questionLayoutStyle">

        <TextView
            style="@style/questionLabelStyle"
            android:text="@string/track7" />

        <TextView
            style="@style/questionStatementStyle"
            android:text="@string/question7" />

        <RadioGroup
            android:id="@+id/question7Group"
            style="@style/radioGroupStyle"
            android:tag="@string/correctAnswerQ7tag">

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/aAnswerQ7" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/bAnswerQ7" />

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/cAnswerQ7" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/dAnswerQ7" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout style="@style/questionLayoutStyle">

        <TextView
            style="@style/questionLabelStyle"
            android:text="@string/track8" />

        <TextView
            style="@style/questionStatementStyle"
            android:text="@string/question8" />

        <RadioGroup
            android:id="@+id/question8Group"
            style="@style/radioGroupStyle"
            android:tag="@string/correctAnswerQ8tag">

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/aAnswerQ8" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/bAnswerQ8" />

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/cAnswerQ8" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/dAnswerQ8" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout style="@style/questionLayoutStyle">

        <TextView
            style="@style/questionLabelStyle"
            android:text="@string/track9" />

        <TextView
            style="@style/questionStatementStyle"
            android:text="@string/question9" />

        <RadioGroup
            android:id="@+id/question9Group"
            style="@style/radioGroupStyle"
            android:tag="@string/correctAnswerQ9tag">

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/aAnswerQ9" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/bAnswerQ9" />

            <RadioButton
                style="@style/possibleAnswerStyle"
                android:text="@string/cAnswerQ9" />

            <RadioButton
                style="@style/possibleAnswerStyleRed"
                android:text="@string/dAnswerQ9" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout style="@style/questionLayoutStyle">

        <TextView
            style="@style/questionLabelStyle"
            android:text="@string/track10" />

        <TextView
            style="@style/questionStatementStyle"
            android:text="@string/question10" />

        <EditText
            android:id="@+id/question10EditText"
            style="@style/possibleAnswerStyleEditText"
            android:hint="@string/editTextAnswerQ10" />

    </LinearLayout>

</merge>
